<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/lightgreen">

    <EditText
        android:id="@+id/signup_email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="@dimen/input_length"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:padding="@dimen/edittext_padding"
        android:background="@color/white"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signup_password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="@dimen/input_length"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:singleLine="true"
        android:padding="@dimen/edittext_padding"
        android:background="@color/white"
        android:hint="@string/signup_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/signup_password_confirm"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="@dimen/input_length"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_password"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:padding="@dimen/edittext_padding"
        android:background="@color/white"
        android:hint="@string/signup_password_confirm"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_password_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:text="@string/action_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/signup_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_button"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_terms"/>

    <TextView
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signup_terms"
        android:layout_marginTop="15dp"/>

</RelativeLayout>