<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/darkgreen">


    <EditText
        android:id="@+id/login_email"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="@dimen/input_length"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@color/white"
        android:padding="@dimen/edittext_padding"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="@dimen/input_length"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="@dimen/edittext_padding"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:text="@string/action_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_button"
        android:layout_marginTop="10dp"/>

</RelativeLayout>